debugging slow async

--- a/experiments/exit_node.ipynb
+++ b/experiments/exit_node.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-25T09:01:28.764848Z",
-     "start_time": "2025-07-25T09:01:28.758684Z"
+     "end_time": "2025-07-25T14:19:24.701522Z",
+     "start_time": "2025-07-25T14:19:24.695733Z"
     }
    },
    "source": [
@@ -17,13 +17,13 @@
     "import pandas as pd"
    ],
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T09:01:28.778466Z",
-     "start_time": "2025-07-25T09:01:28.773750Z"
+     "end_time": "2025-07-25T14:19:24.726822Z",
+     "start_time": "2025-07-25T14:19:24.722327Z"
     }
    },
    "cell_type": "code",
@@ -33,13 +33,13 @@
    ],
    "id": "9a167c3ce1a019bb",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T09:01:28.841655Z",
-     "start_time": "2025-07-25T09:01:28.835145Z"
+     "end_time": "2025-07-25T14:19:24.785902Z",
+     "start_time": "2025-07-25T14:19:24.779634Z"
     }
    },
    "cell_type": "code",
@@ -55,13 +55,13 @@
    ],
    "id": "eb6ed45411df3dc6",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 40
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T09:01:28.907249Z",
-     "start_time": "2025-07-25T09:01:28.893156Z"
+     "end_time": "2025-07-25T14:19:24.847150Z",
+     "start_time": "2025-07-25T14:19:24.833679Z"
     }
    },
    "cell_type": "code",
@@ -105,13 +105,13 @@
    ],
    "id": "9a943ae1a56670d4",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T09:01:28.951861Z",
-     "start_time": "2025-07-25T09:01:28.947530Z"
+     "end_time": "2025-07-25T14:19:24.900667Z",
+     "start_time": "2025-07-25T14:19:24.896468Z"
     }
    },
    "cell_type": "code",
@@ -121,13 +121,13 @@
    ],
    "id": "87b521412fb59947",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 42
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T09:01:29.010332Z",
-     "start_time": "2025-07-25T09:01:29.003654Z"
+     "end_time": "2025-07-25T14:19:24.959633Z",
+     "start_time": "2025-07-25T14:19:24.952519Z"
     }
    },
    "cell_type": "code",
@@ -144,13 +144,13 @@
    ],
    "id": "a179e687813b65da",
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T09:01:29.065374Z",
-     "start_time": "2025-07-25T09:01:29.058995Z"
+     "end_time": "2025-07-25T14:19:25.014858Z",
+     "start_time": "2025-07-25T14:19:25.008340Z"
     }
    },
    "cell_type": "code",
@@ -164,6 +164,7 @@
     "    data = process_data(data)\n",
     "\n",
     "    unique_fields = data['field'].unique()\n",
+    "    print(unique_fields)\n",
     "\n",
     "    for metric in metric_names:\n",
     "        if metric in unique_fields:\n",
@@ -173,13 +174,13 @@
    ],
    "id": "ce424af21647dcd4",
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 44
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T09:01:31.934302Z",
-     "start_time": "2025-07-25T09:01:29.115549Z"
+     "end_time": "2025-07-25T14:19:27.889698Z",
+     "start_time": "2025-07-25T14:19:25.066753Z"
     }
    },
    "cell_type": "code",
@@ -201,17 +202,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['fragments_received' 'stage' 'unacked_msg' 'round_time'\n",
+      " 'deleted_cache_for_inactive' 'sending_messages' 'sending_covers'\n",
+      " 'out_interval' 'covers_received' 'covers_sent' 'active_peers' 'resent'\n",
+      " 'received_duplicate_msg' 'accuracy' 'current_round' 'errors'\n",
+      " 'surb_received' 'surb_replied' 'forwarded' 'total_mbytes_received'\n",
+      " 'total_mbytes_sent' 'total_received' 'total_sent' 'fragments_sent'\n",
+      " 'aggregated_accuracy' 'cpu_total_ns' 'memory_mb']\n",
       "Metric not found in data: total_messages_sent\n"
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 45
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T09:01:31.946191Z",
-     "start_time": "2025-07-25T09:01:31.943161Z"
+     "end_time": "2025-07-25T14:19:27.908555Z",
+     "start_time": "2025-07-25T14:19:27.905753Z"
     }
    },
    "cell_type": "code",
