split up large method

--- a/experiments/experimenting_exit_join.ipynb
+++ b/experiments/experimenting_exit_join.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-11T10:06:00.144620Z",
-     "start_time": "2025-08-11T10:05:54.983888Z"
+     "end_time": "2025-08-11T13:25:16.034623Z",
+     "start_time": "2025-08-11T13:25:16.027905Z"
     }
    },
    "cell_type": "code",
@@ -14,8 +14,37 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from matplotlib.ticker import MaxNLocator, MultipleLocator\n",
-    "\n",
+    "from matplotlib.ticker import MaxNLocator, MultipleLocator"
+   ],
+   "id": "39efed11ff4896a1",
+   "outputs": [],
+   "execution_count": 51
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.086800Z",
+     "start_time": "2025-08-11T13:25:16.081257Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "csv_file_path = '../metrics/exit_join_node.csv'\n",
+    "figure_path = 'figures_join_exit/'\n"
+   ],
+   "id": "ec702e00ff3e9373",
+   "outputs": [],
+   "execution_count": 52
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.156578Z",
+     "start_time": "2025-08-11T13:25:16.151603Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "plt.rcParams.update({\n",
     "    'font.family': 'Arial',\n",
     "    'font.size': 10,\n",
@@ -24,11 +53,21 @@
     "    'xtick.labelsize': 8,\n",
     "    'ytick.labelsize': 8,\n",
     "    'legend.fontsize': 8\n",
-    "})\n",
-    "\n",
-    "csv_file_path = '../metrics/exit_join_node.csv'\n",
-    "figure_path = 'figures_join_exit/'\n",
-    "\n",
+    "})"
+   ],
+   "id": "305861f41ab1c3ac",
+   "outputs": [],
+   "execution_count": 53
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.217257Z",
+     "start_time": "2025-08-11T13:25:16.212533Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "METRICS_FILTER = [\n",
     "    \"unacked_msg\",\n",
     "    \"stage\",\n",
@@ -37,8 +76,21 @@
     "]\n",
     "\n",
     "TRIM_START = 0\n",
-    "TRIM_END = None\n",
-    "\n",
+    "TRIM_END = None\n"
+   ],
+   "id": "de1d7d014133a131",
+   "outputs": [],
+   "execution_count": 54
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.285551Z",
+     "start_time": "2025-08-11T13:25:16.272486Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "METRIC_DETAILS = {\n",
     "    \"total_sent\": {\"name\": \"Total Messages Sent\", \"unit\": \"\"},\n",
     "    \"total_received\": {\"name\": \"Total Packets Received\", \"unit\": \"\"},\n",
@@ -73,9 +125,21 @@
     "    \"out_interval\": {\"name\": \"Outgoing Interval\", \"unit\": \"s\"},\n",
     "    \"sending_time\": {\"name\": \"Transmission Time\", \"unit\": \"s\"},\n",
     "    \"total_out_interval\": {\"name\": \"Total Outgoing Interval\", \"unit\": \"s\"}\n",
-    "}\n",
-    "\n",
-    "\n",
+    "}\n"
+   ],
+   "id": "cc6d78b3dbb01edf",
+   "outputs": [],
+   "execution_count": 55
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.341828Z",
+     "start_time": "2025-08-11T13:25:16.333697Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "def load_file(path):\n",
     "    df = pd.read_csv(path, comment='#')\n",
     "    if 'timestamp' in df.columns:\n",
@@ -87,9 +151,21 @@
     "    else:\n",
     "        df['timestamp'] = pd.Timestamp.utcnow()\n",
     "    df['value'] = pd.to_numeric(df['value'], errors='coerce')\n",
-    "    return df\n",
-    "\n",
-    "\n",
+    "    return df\n"
+   ],
+   "id": "4eee7142231f7e04",
+   "outputs": [],
+   "execution_count": 56
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.404982Z",
+     "start_time": "2025-08-11T13:25:16.396956Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "def last_extend(df):\n",
     "    last_t = df['time_seconds'].max()\n",
     "    parts = []\n",
@@ -101,69 +177,230 @@
     "                 'field': [g['field'].iat[0]]})], ignore_index=True))\n",
     "        else:\n",
     "            parts.append(g)\n",
-    "    return pd.concat(parts, ignore_index=True)\n",
-    "\n",
-    "\n",
+    "    return pd.concat(parts, ignore_index=True)\n"
+   ],
+   "id": "61aa85abf8bba3fd",
+   "outputs": [],
+   "execution_count": 57
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.462306Z",
+     "start_time": "2025-08-11T13:25:16.456639Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "def trim(df, start, tail):\n",
     "    end = df['time_seconds'].max()\n",
     "    if tail is not None:\n",
     "        end = max(start, end - tail)\n",
-    "    return df[(df['time_seconds'] >= start) & (df['time_seconds'] <= end)]\n",
-    "\n",
-    "\n",
+    "    return df[(df['time_seconds'] >= start) & (df['time_seconds'] <= end)]\n"
+   ],
+   "id": "6207ca6bea2d1ef",
+   "outputs": [],
+   "execution_count": 58
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.521337Z",
+     "start_time": "2025-08-11T13:25:16.516292Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "def plot(dataframes, out_dir):\n",
-    "    fields = METRICS_FILTER if METRICS_FILTER else sorted(set().union(*(d['field'].unique() for d in dataframes)))\n",
+    "    fields = get_fields(dataframes)\n",
     "    for field in fields:\n",
-    "        fig, ax = plt.subplots(figsize=(10, 3.125))\n",
-    "        vmin = np.inf\n",
-    "        vmax = -np.inf\n",
-    "        lines_plotted = False\n",
-    "        all_integers = True\n",
+    "        process_field(field, dataframes, out_dir)\n"
+   ],
+   "id": "697679f70fcf6065",
+   "outputs": [],
+   "execution_count": 59
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.581620Z",
+     "start_time": "2025-08-11T13:25:16.576568Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def get_fields(dataframes):\n",
+    "    return METRICS_FILTER if METRICS_FILTER else sorted(set().union(*(d['field'].unique() for d in dataframes)))\n"
+   ],
+   "id": "47a687aab504608d",
+   "outputs": [],
+   "execution_count": 60
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.645997Z",
+     "start_time": "2025-08-11T13:25:16.638780Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def process_field(field, dataframes, out_dir):\n",
+    "    fig, ax = plt.subplots(figsize=(10, 3.125))\n",
+    "    vmin, vmax, lines_plotted, all_integers = initialize_plot_params()\n",
     "\n",
-    "        for df in dataframes:\n",
-    "            sel = df[df['field'] == field].copy()\n",
-    "            if sel.empty:\n",
-    "                continue\n",
-    "            sel = last_extend(sel)\n",
-    "            sel = trim(sel, TRIM_START, TRIM_END)\n",
-    "            for node, g in sel.groupby('node'):\n",
-    "                ax.plot(g['time_seconds'] / 60, g['value'], label=f\"Node {node.replace('node_', '')}\", linewidth=0.8)\n",
-    "                lines_plotted = True\n",
-    "                if not g['value'].dropna().empty:\n",
-    "                    vmin = min(vmin, g['value'].min())\n",
-    "                    vmax = max(vmax, g['value'].max())\n",
-    "                if not np.all(np.isclose(g['value'].dropna(), g['value'].dropna().round())):\n",
-    "                    all_integers = False\n",
-    "\n",
-    "        if not lines_plotted:\n",
-    "            plt.close(fig)\n",
+    "    for df in dataframes:\n",
+    "        sel = filter_and_prepare_data(df, field)\n",
+    "        if sel.empty:\n",
     "            continue\n",
+    "        vmin, vmax, all_integers, lines_plotted = plot_data(ax, sel, vmin, vmax, all_integers, lines_plotted)\n",
     "\n",
-    "        details = METRIC_DETAILS.get(field, {\"name\": field.replace('_', ' ').title(), \"unit\": \"\"})\n",
-    "        y_label = f\"{details['name']} ({details['unit']})\" if details[\"unit\"] else details[\"name\"]\n",
-    "        ax.set_title(details['name'])\n",
-    "        ax.set_xlabel(\"Time (minutes)\", labelpad=15)\n",
-    "        ax.set_ylabel(y_label)\n",
-    "        ax.grid(True, linestyle='--', alpha=0.6)\n",
+    "    if not lines_plotted:\n",
+    "        plt.close(fig)\n",
+    "        return\n",
     "\n",
-    "        legend = ax.legend(loc=\"upper left\", edgecolor=None, fontsize=8)\n",
-    "        legend.get_frame().set_alpha(None)\n",
-    "        legend.get_frame().set_facecolor((1, 1, 1, 1))\n",
+    "    finalize_and_save_plot(ax, field, vmin, vmax, all_integers, out_dir)\n"
+   ],
+   "id": "f8d6e25cae09e37c",
+   "outputs": [],
+   "execution_count": 61
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.709162Z",
+     "start_time": "2025-08-11T13:25:16.703916Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def initialize_plot_params():\n",
+    "    return np.inf, -np.inf, False, True\n"
+   ],
+   "id": "2a80cdec3d7b3929",
+   "outputs": [],
+   "execution_count": 62
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.770389Z",
+     "start_time": "2025-08-11T13:25:16.764710Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def filter_and_prepare_data(df, field):\n",
+    "    sel = df[df['field'] == field].copy()\n",
+    "    if not sel.empty:\n",
+    "        sel = last_extend(sel)\n",
+    "        sel = trim(sel, TRIM_START, TRIM_END)\n",
+    "    return sel\n"
+   ],
+   "id": "5ce48e4c00e8468f",
+   "outputs": [],
+   "execution_count": 63
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.832912Z",
+     "start_time": "2025-08-11T13:25:16.824609Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def plot_data(ax, sel, vmin, vmax, all_integers, lines_plotted):\n",
+    "    for node, g in sel.groupby('node'):\n",
+    "        ax.plot(g['time_seconds'] / 60, g['value'], label=f\"Node {node.replace('node_', '')}\", linewidth=0.8)\n",
+    "        lines_plotted = True\n",
+    "        if not g['value'].dropna().empty:\n",
+    "            vmin = min(vmin, g['value'].min())\n",
+    "            vmax = max(vmax, g['value'].max())\n",
+    "        if not np.all(np.isclose(g['value'].dropna(), g['value'].dropna().round())):\n",
+    "            all_integers = False\n",
+    "    return vmin, vmax, all_integers, lines_plotted\n"
+   ],
+   "id": "8277662859489d4e",
+   "outputs": [],
+   "execution_count": 64
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.898826Z",
+     "start_time": "2025-08-11T13:25:16.890980Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def finalize_and_save_plot(ax, field, vmin, vmax, all_integers, out_dir):\n",
+    "    details = METRIC_DETAILS.get(field, {\"name\": field.replace('_', ' ').title(), \"unit\": \"\"})\n",
+    "    y_label = f\"{details['name']} ({details['unit']})\" if details[\"unit\"] else details[\"name\"]\n",
     "\n",
-    "        ax.xaxis.set_major_locator(MultipleLocator(1))\n",
+    "    ax.set_title(details['name'])\n",
+    "    ax.set_xlabel(\"Time (minutes)\", labelpad=15)\n",
+    "    ax.set_ylabel(y_label)\n",
+    "    ax.grid(True, linestyle='--', alpha=0.6)\n",
     "\n",
-    "        if np.isfinite(vmin) and np.isfinite(vmax) and vmin >= 0 and vmax <= 1:\n",
-    "            ax.set_ylim(0, 1)\n",
-    "            ax.set_yticks(np.linspace(0, 1, 10))\n",
+    "    configure_legend(ax)\n",
+    "    configure_axes(ax, vmin, vmax, all_integers)\n",
     "\n",
-    "        if all_integers:\n",
-    "            ax.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "\n",
-    "        plt.savefig(\"plot.png\", bbox_inches=\"tight\", dpi=600)\n",
-    "        plt.savefig(join(out_dir, f\"topology_{field}_per_node.pdf\"), bbox_inches=\"tight\")\n",
-    "        plt.show()\n",
-    "\n",
-    "\n",
+    "    plt.savefig(join(out_dir, f\"topology_{field}_per_node.pdf\"), bbox_inches=\"tight\", dpi=600)\n",
+    "    plt.show()\n"
+   ],
+   "id": "2583f7e562fefd1f",
+   "outputs": [],
+   "execution_count": 65
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:16.965095Z",
+     "start_time": "2025-08-11T13:25:16.959036Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def configure_axes(ax, vmin, vmax, all_integers):\n",
+    "    ax.xaxis.set_major_locator(MultipleLocator(1))\n",
+    "    if np.isfinite(vmin) and np.isfinite(vmax) and vmin >= 0 and vmax <= 1:\n",
+    "        ax.set_ylim(0, 1)\n",
+    "        ax.set_yticks(np.linspace(0, 1, 10))\n",
+    "    if all_integers:\n",
+    "        ax.yaxis.set_major_locator(MaxNLocator(integer=True))\n"
+   ],
+   "id": "9ad59468cfbddb0a",
+   "outputs": [],
+   "execution_count": 66
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:17.035025Z",
+     "start_time": "2025-08-11T13:25:17.029707Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def configure_legend(ax):\n",
+    "    legend = ax.legend(loc=\"upper left\", edgecolor=None, fontsize=8)\n",
+    "    legend.get_frame().set_alpha(None)\n",
+    "    legend.get_frame().set_facecolor((1, 1, 1, 1))\n"
+   ],
+   "id": "b683872fa236112d",
+   "outputs": [],
+   "execution_count": 67
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-11T13:25:18.737138Z",
+     "start_time": "2025-08-11T13:25:17.104229Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "if __name__ == \"__main__\":\n",
     "    if isfile(csv_file_path) and csv_file_path.lower().endswith('.csv'):\n",
     "        df = load_file(csv_file_path)\n",
@@ -174,7 +411,7 @@
     "    else:\n",
     "        print(f\"Invalid file path: {csv_file_path}.\")\n"
    ],
-   "id": "39efed11ff4896a1",
+   "id": "21cb6ef18b055dc2",
    "outputs": [
     {
      "data": {
@@ -217,7 +454,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 25
+   "execution_count": 68
   }
  ],
  "metadata": {
