fixed exit join experiment visuals

--- a/experiments/experimenting_exit_join.ipynb
+++ b/experiments/experimenting_exit_join.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.034623Z",
-     "start_time": "2025-08-11T13:25:16.027905Z"
+     "end_time": "2025-08-11T13:32:59.320965Z",
+     "start_time": "2025-08-11T13:32:59.314430Z"
     }
    },
    "cell_type": "code",
@@ -16,31 +16,15 @@
     "import pandas as pd\n",
     "from matplotlib.ticker import MaxNLocator, MultipleLocator"
    ],
-   "id": "39efed11ff4896a1",
+   "id": "ba1a771de1dbd09a",
    "outputs": [],
-   "execution_count": 51
+   "execution_count": 72
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.086800Z",
-     "start_time": "2025-08-11T13:25:16.081257Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "csv_file_path = '../metrics/exit_join_node.csv'\n",
-    "figure_path = 'figures_join_exit/'\n"
-   ],
-   "id": "ec702e00ff3e9373",
-   "outputs": [],
-   "execution_count": 52
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.156578Z",
-     "start_time": "2025-08-11T13:25:16.151603Z"
+     "end_time": "2025-08-11T13:32:59.399434Z",
+     "start_time": "2025-08-11T13:32:59.384647Z"
     }
    },
    "cell_type": "code",
@@ -53,21 +37,11 @@
     "    'xtick.labelsize': 8,\n",
     "    'ytick.labelsize': 8,\n",
     "    'legend.fontsize': 8\n",
-    "})"
-   ],
-   "id": "305861f41ab1c3ac",
-   "outputs": [],
-   "execution_count": 53
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.217257Z",
-     "start_time": "2025-08-11T13:25:16.212533Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
+    "})\n",
+    "\n",
+    "csv_file_path = '../metrics/exit_join_node.csv'\n",
+    "figure_path = 'figures_join_exit/'\n",
+    "\n",
     "METRICS_FILTER = [\n",
     "    \"unacked_msg\",\n",
     "    \"stage\",\n",
@@ -76,21 +50,8 @@
     "]\n",
     "\n",
     "TRIM_START = 0\n",
-    "TRIM_END = None\n"
-   ],
-   "id": "de1d7d014133a131",
-   "outputs": [],
-   "execution_count": 54
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.285551Z",
-     "start_time": "2025-08-11T13:25:16.272486Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
+    "TRIM_END = None\n",
+    "\n",
     "METRIC_DETAILS = {\n",
     "    \"total_sent\": {\"name\": \"Total Messages Sent\", \"unit\": \"\"},\n",
     "    \"total_received\": {\"name\": \"Total Packets Received\", \"unit\": \"\"},\n",
@@ -127,15 +88,15 @@
     "    \"total_out_interval\": {\"name\": \"Total Outgoing Interval\", \"unit\": \"s\"}\n",
     "}\n"
    ],
-   "id": "cc6d78b3dbb01edf",
+   "id": "9ad59468cfbddb0a",
    "outputs": [],
-   "execution_count": 55
+   "execution_count": 73
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.341828Z",
-     "start_time": "2025-08-11T13:25:16.333697Z"
+     "end_time": "2025-08-11T13:32:59.452612Z",
+     "start_time": "2025-08-11T13:32:59.444328Z"
     }
    },
    "cell_type": "code",
@@ -153,15 +114,15 @@
     "    df['value'] = pd.to_numeric(df['value'], errors='coerce')\n",
     "    return df\n"
    ],
-   "id": "4eee7142231f7e04",
+   "id": "11a013e675f9ce34",
    "outputs": [],
-   "execution_count": 56
+   "execution_count": 74
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.404982Z",
-     "start_time": "2025-08-11T13:25:16.396956Z"
+     "end_time": "2025-08-11T13:32:59.511977Z",
+     "start_time": "2025-08-11T13:32:59.503765Z"
     }
    },
    "cell_type": "code",
@@ -179,15 +140,15 @@
     "            parts.append(g)\n",
     "    return pd.concat(parts, ignore_index=True)\n"
    ],
-   "id": "61aa85abf8bba3fd",
+   "id": "49d3a5aa0ee773b3",
    "outputs": [],
-   "execution_count": 57
+   "execution_count": 75
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.462306Z",
-     "start_time": "2025-08-11T13:25:16.456639Z"
+     "end_time": "2025-08-11T13:32:59.573347Z",
+     "start_time": "2025-08-11T13:32:59.567349Z"
     }
    },
    "cell_type": "code",
@@ -198,205 +159,79 @@
     "        end = max(start, end - tail)\n",
     "    return df[(df['time_seconds'] >= start) & (df['time_seconds'] <= end)]\n"
    ],
-   "id": "6207ca6bea2d1ef",
+   "id": "79e279e8229dca92",
    "outputs": [],
-   "execution_count": 58
+   "execution_count": 76
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.521337Z",
-     "start_time": "2025-08-11T13:25:16.516292Z"
+     "end_time": "2025-08-11T13:32:59.650467Z",
+     "start_time": "2025-08-11T13:32:59.629813Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def plot(dataframes, out_dir):\n",
-    "    fields = get_fields(dataframes)\n",
+    "    fields = METRICS_FILTER if METRICS_FILTER else sorted(set().union(*(d['field'].unique() for d in dataframes)))\n",
     "    for field in fields:\n",
-    "        process_field(field, dataframes, out_dir)\n"
-   ],
-   "id": "697679f70fcf6065",
-   "outputs": [],
-   "execution_count": 59
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.581620Z",
-     "start_time": "2025-08-11T13:25:16.576568Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "def get_fields(dataframes):\n",
-    "    return METRICS_FILTER if METRICS_FILTER else sorted(set().union(*(d['field'].unique() for d in dataframes)))\n"
-   ],
-   "id": "47a687aab504608d",
-   "outputs": [],
-   "execution_count": 60
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.645997Z",
-     "start_time": "2025-08-11T13:25:16.638780Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "def process_field(field, dataframes, out_dir):\n",
-    "    fig, ax = plt.subplots(figsize=(10, 3.125))\n",
-    "    vmin, vmax, lines_plotted, all_integers = initialize_plot_params()\n",
+    "        fig, ax = plt.subplots(figsize=(10, 3.125))\n",
+    "        vmin = np.inf\n",
+    "        vmax = -np.inf\n",
+    "        lines_plotted = False\n",
+    "        all_integers = True\n",
     "\n",
-    "    for df in dataframes:\n",
-    "        sel = filter_and_prepare_data(df, field)\n",
-    "        if sel.empty:\n",
+    "        for df in dataframes:\n",
+    "            sel = df[df['field'] == field].copy()\n",
+    "            if sel.empty:\n",
+    "                continue\n",
+    "            sel = last_extend(sel)\n",
+    "            sel = trim(sel, TRIM_START, TRIM_END)\n",
+    "            for node, g in sel.groupby('node'):\n",
+    "                ax.plot(g['time_seconds'] / 60, g['value'], label=f\"Node {node.replace('node_', '')}\", linewidth=0.8)\n",
+    "                lines_plotted = True\n",
+    "                if not g['value'].dropna().empty:\n",
+    "                    vmin = min(vmin, g['value'].min())\n",
+    "                    vmax = max(vmax, g['value'].max())\n",
+    "                if not np.all(np.isclose(g['value'].dropna(), g['value'].dropna().round())):\n",
+    "                    all_integers = False\n",
+    "\n",
+    "        if not lines_plotted:\n",
+    "            plt.close(fig)\n",
     "            continue\n",
-    "        vmin, vmax, all_integers, lines_plotted = plot_data(ax, sel, vmin, vmax, all_integers, lines_plotted)\n",
     "\n",
-    "    if not lines_plotted:\n",
-    "        plt.close(fig)\n",
-    "        return\n",
+    "        details = METRIC_DETAILS.get(field, {\"name\": field.replace('_', ' ').title(), \"unit\": \"\"})\n",
+    "        y_label = f\"{details['name']} ({details['unit']})\" if details[\"unit\"] else details[\"name\"]\n",
+    "        ax.set_title(details['name'])\n",
+    "        ax.set_xlabel(\"Time (minutes)\", labelpad=15)\n",
+    "        ax.set_ylabel(y_label)\n",
+    "        ax.grid(True, linestyle='--', alpha=0.6)\n",
     "\n",
-    "    finalize_and_save_plot(ax, field, vmin, vmax, all_integers, out_dir)\n"
-   ],
-   "id": "f8d6e25cae09e37c",
-   "outputs": [],
-   "execution_count": 61
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.709162Z",
-     "start_time": "2025-08-11T13:25:16.703916Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "def initialize_plot_params():\n",
-    "    return np.inf, -np.inf, False, True\n"
-   ],
-   "id": "2a80cdec3d7b3929",
-   "outputs": [],
-   "execution_count": 62
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.770389Z",
-     "start_time": "2025-08-11T13:25:16.764710Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "def filter_and_prepare_data(df, field):\n",
-    "    sel = df[df['field'] == field].copy()\n",
-    "    if not sel.empty:\n",
-    "        sel = last_extend(sel)\n",
-    "        sel = trim(sel, TRIM_START, TRIM_END)\n",
-    "    return sel\n"
-   ],
-   "id": "5ce48e4c00e8468f",
-   "outputs": [],
-   "execution_count": 63
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.832912Z",
-     "start_time": "2025-08-11T13:25:16.824609Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "def plot_data(ax, sel, vmin, vmax, all_integers, lines_plotted):\n",
-    "    for node, g in sel.groupby('node'):\n",
-    "        ax.plot(g['time_seconds'] / 60, g['value'], label=f\"Node {node.replace('node_', '')}\", linewidth=0.8)\n",
-    "        lines_plotted = True\n",
-    "        if not g['value'].dropna().empty:\n",
-    "            vmin = min(vmin, g['value'].min())\n",
-    "            vmax = max(vmax, g['value'].max())\n",
-    "        if not np.all(np.isclose(g['value'].dropna(), g['value'].dropna().round())):\n",
-    "            all_integers = False\n",
-    "    return vmin, vmax, all_integers, lines_plotted\n"
-   ],
-   "id": "8277662859489d4e",
-   "outputs": [],
-   "execution_count": 64
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.898826Z",
-     "start_time": "2025-08-11T13:25:16.890980Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "def finalize_and_save_plot(ax, field, vmin, vmax, all_integers, out_dir):\n",
-    "    details = METRIC_DETAILS.get(field, {\"name\": field.replace('_', ' ').title(), \"unit\": \"\"})\n",
-    "    y_label = f\"{details['name']} ({details['unit']})\" if details[\"unit\"] else details[\"name\"]\n",
+    "        legend = ax.legend(loc=\"upper left\", edgecolor=None, fontsize=8)\n",
+    "        legend.get_frame().set_alpha(None)\n",
+    "        legend.get_frame().set_facecolor((1, 1, 1, 1))\n",
     "\n",
-    "    ax.set_title(details['name'])\n",
-    "    ax.set_xlabel(\"Time (minutes)\", labelpad=15)\n",
-    "    ax.set_ylabel(y_label)\n",
-    "    ax.grid(True, linestyle='--', alpha=0.6)\n",
+    "        ax.xaxis.set_major_locator(MultipleLocator(1))\n",
     "\n",
-    "    configure_legend(ax)\n",
-    "    configure_axes(ax, vmin, vmax, all_integers)\n",
+    "        if np.isfinite(vmin) and np.isfinite(vmax) and vmin >= 0 and vmax <= 1:\n",
+    "            ax.set_ylim(0, 1)\n",
+    "            ax.set_yticks(np.linspace(0, 1, 10))\n",
     "\n",
-    "    plt.savefig(join(out_dir, f\"topology_{field}_per_node.pdf\"), bbox_inches=\"tight\", dpi=600)\n",
-    "    plt.show()\n"
+    "        if all_integers:\n",
+    "            ax.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "\n",
+    "        plt.savefig(join(out_dir, f\"topology_{field}_per_node.pdf\"), bbox_inches=\"tight\", dpi=600)\n",
+    "        plt.show()\n"
    ],
-   "id": "2583f7e562fefd1f",
+   "id": "7d244f1fde9941e3",
    "outputs": [],
-   "execution_count": 65
+   "execution_count": 77
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:16.965095Z",
-     "start_time": "2025-08-11T13:25:16.959036Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "def configure_axes(ax, vmin, vmax, all_integers):\n",
-    "    ax.xaxis.set_major_locator(MultipleLocator(1))\n",
-    "    if np.isfinite(vmin) and np.isfinite(vmax) and vmin >= 0 and vmax <= 1:\n",
-    "        ax.set_ylim(0, 1)\n",
-    "        ax.set_yticks(np.linspace(0, 1, 10))\n",
-    "    if all_integers:\n",
-    "        ax.yaxis.set_major_locator(MaxNLocator(integer=True))\n"
-   ],
-   "id": "9ad59468cfbddb0a",
-   "outputs": [],
-   "execution_count": 66
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:17.035025Z",
-     "start_time": "2025-08-11T13:25:17.029707Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "def configure_legend(ax):\n",
-    "    legend = ax.legend(loc=\"upper left\", edgecolor=None, fontsize=8)\n",
-    "    legend.get_frame().set_alpha(None)\n",
-    "    legend.get_frame().set_facecolor((1, 1, 1, 1))\n"
-   ],
-   "id": "b683872fa236112d",
-   "outputs": [],
-   "execution_count": 67
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-11T13:25:18.737138Z",
-     "start_time": "2025-08-11T13:25:17.104229Z"
+     "end_time": "2025-08-11T13:33:01.333159Z",
+     "start_time": "2025-08-11T13:32:59.693179Z"
     }
    },
    "cell_type": "code",
@@ -409,9 +244,9 @@
     "            df['time_seconds'] = (df['timestamp'] - global_start).dt.total_seconds()\n",
     "            plot([df], figure_path)\n",
     "    else:\n",
-    "        print(f\"Invalid file path: {csv_file_path}.\")\n"
+    "        print(f\"Invalid file path: {csv_file_path}.\")"
    ],
-   "id": "21cb6ef18b055dc2",
+   "id": "471512cd80caa7a5",
    "outputs": [
     {
      "data": {
@@ -454,7 +289,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 68
+   "execution_count": 78
   }
  ],
  "metadata": {
