--- a/experiments/2_scenario_resilience.ipynb
+++ b/experiments/2_scenario_resilience.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T11:42:13.353168Z",
-     "start_time": "2025-08-12T11:42:12.690453Z"
+     "end_time": "2025-08-13T11:39:51.245741Z",
+     "start_time": "2025-08-13T11:39:51.240694Z"
     }
    },
    "cell_type": "code",
@@ -14,19 +14,17 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from matplotlib.ticker import MaxNLocator, MultipleLocator\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.legend_handler import HandlerLine2D"
+    "from matplotlib.ticker import MaxNLocator, MultipleLocator"
    ],
    "id": "ba1a771de1dbd09a",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T11:42:13.369265Z",
-     "start_time": "2025-08-12T11:42:13.360843Z"
+     "end_time": "2025-08-13T11:39:51.309272Z",
+     "start_time": "2025-08-13T11:39:51.300345Z"
     }
    },
    "cell_type": "code",
@@ -94,13 +92,13 @@
    ],
    "id": "9ad59468cfbddb0a",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T11:42:13.522735Z",
-     "start_time": "2025-08-12T11:42:13.518228Z"
+     "end_time": "2025-08-13T11:39:51.366318Z",
+     "start_time": "2025-08-13T11:39:51.358605Z"
     }
    },
    "cell_type": "code",
@@ -120,13 +118,13 @@
    ],
    "id": "11a013e675f9ce34",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T11:42:13.570696Z",
-     "start_time": "2025-08-12T11:42:13.564885Z"
+     "end_time": "2025-08-13T11:39:51.425127Z",
+     "start_time": "2025-08-13T11:39:51.419839Z"
     }
    },
    "cell_type": "code",
@@ -146,13 +144,13 @@
    ],
    "id": "49d3a5aa0ee773b3",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T11:42:13.627072Z",
-     "start_time": "2025-08-12T11:42:13.621419Z"
+     "end_time": "2025-08-13T11:39:51.482425Z",
+     "start_time": "2025-08-13T11:39:51.477019Z"
     }
    },
    "cell_type": "code",
@@ -165,13 +163,13 @@
    ],
    "id": "79e279e8229dca92",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T11:42:13.693480Z",
-     "start_time": "2025-08-12T11:42:13.674189Z"
+     "end_time": "2025-08-13T11:39:51.553045Z",
+     "start_time": "2025-08-13T11:39:51.533947Z"
     }
    },
    "cell_type": "code",
@@ -231,13 +229,13 @@
    ],
    "id": "7d244f1fde9941e3",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T11:42:15.519261Z",
-     "start_time": "2025-08-12T11:42:13.730631Z"
+     "end_time": "2025-08-13T11:39:53.555102Z",
+     "start_time": "2025-08-13T11:39:51.594186Z"
     }
    },
    "cell_type": "code",
@@ -295,13 +293,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 7
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T11:42:15.529855Z",
-     "start_time": "2025-08-12T11:42:15.527026Z"
+     "end_time": "2025-08-13T11:39:53.573739Z",
+     "start_time": "2025-08-13T11:39:53.570879Z"
     }
    },
    "cell_type": "code",
